# Azure-Sphere-Learning-Path

./: .gitignore  README.md
AVNET/Lab_1_Visual_Studio_and_Azure_Sphere/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  main.c
AVNET/Lab_3_Cloud_to_Device_Control_Twins_Methods/: CMakeLists.txt  app_manifest.json  main.c
AVNET/Lab_5_FreeRTOS_and_Azure_IoT_Central/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c
Drivers/AVNET_SK/HighLevel/: CMakeLists.txt  imu_temp_pressure.h
Drivers/MT3620_Grove_Shield_Library/: CMakeLists.txt  applibs_versions.h
Drivers/MT3620_Grove_Shield_Library/HAL/: GroveShield.c
Drivers/MT3620_Grove_Shield_Library/Sensors/: GroveAD7992.h  GroveLEDButton.c
IntercoreContract/: intercore_contract.h
Lab 1 - Build your first Azure Sphere Application with Visual Studio/Azure_Sphere_plus_Grove_Shield_Sensor_Kit/: CMakeLists.txt  Utilities.c  app_manifest.json  globals.h  main.c  utilities.h
Lab 4 - Integrating FreeRTOS with Azure Sphere Inter-Core Communications/MT3620_Grove_Shield/MT3620_Grove_Shield_Library/: CMakeLists.txt
Lab 4 - Integrating FreeRTOS with Azure Sphere Inter-Core Communications/MT3620_Grove_Shield/MT3620_Grove_Shield_Library/HAL/: GroveShield.c
Lab 4 - Integrating FreeRTOS with Azure Sphere Inter-Core Messaging/azure-sphere-hlcore-iot-central/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  app_manifest.sample.json  azure_iot.c  azure_iot.h  globals.c  inter_core.h  main.c  peripheral.c  utilities.c  utilities.h
Lab_2_Send_Telemetry_to_Azure_IoT_Central/: CMakeLists.txt  README.md  app_manifest.json  globals.h  inter_core.c  main.c
Lab_4_Direct_Methods/: CMakeLists.txt  app_manifest.json  main.c
Lab_4_Direct_Methods/learning_path_libs/: CMakeLists.txt  device_twins.c  device_twins.h  direct_methods.c  direct_methods.h
Lab_4_Direct_Methods/learning_path_libs/AVNET/: light_sensor.h  lsm6dso_reg.c
Lab_4_FreeRTOS_Integration/MT3620_M4_BSP/FreeRTOS/: CMakeLists.txt
Lab_4_FreeRTOS_Integration/MT3620_M4_BSP/FreeRTOS/portable/: heap_4.c
Lab_4_FreeRTOS_and_Inter-Core_Messaging/: AzureSphereRTCoreToolchainMTK.cmake  CMakeLists.txt  CMakeSettings.json  app_manifest.json  lsm6dso_reg.c  main.c
Lab_4_FreeRTOS_and_Inter-Core_Messaging/MT3620_M4_BSP/CMSIS/include/: irq.h
Lab_4_FreeRTOS_and_Inter-Core_Messaging/MT3620_M4_BSP/FreeRTOS/: CMakeLists.txt
Lab_4_FreeRTOS_and_Inter-Core_Messaging/MT3620_M4_BSP/mt3620/src/: nvic.c
Lab_4_FreeRTOS_and_Inter-Core_Messaging/MT3620_M4_Driver/HDL/inc/: hdl_adc.h  hdl_eint.h  hdl_gpt.h  hdl_i2c.h  hdl_i2s.h  hdl_spim.h  hdl_wdt.h
Lab_4_FreeRTOS_and_Inter-Core_Messaging/MT3620_M4_Driver/HDL/src/: hdl_i2s.c  hdl_spim.c
Lab_4_FreeRTOS_and_Inter-Core_Messaging/MT3620_M4_Driver/MHAL/inc/: mhal_gpioif.h  mhal_osai.h  mhal_spim.h
Lab_4_FreeRTOS_and_Inter-Core_Messaging/MT3620_M4_Driver/MHAL/src/: mhal_gpio.c
Lab_4_FreeRTOS_and_Inter-Core_Messaging/OS_HAL/inc/: os_hal_adc.h  os_hal_dma.h  os_hal_gpt.h  os_hal_pwm.h
Lab_4_FreeRTOS_and_Inter-Core_Messaging/OS_HAL/src/: os_hal_gpio.c  os_hal_i2c.c  os_hal_i2s.c  os_hal_mbox.c  os_hal_spim.c  os_hal_uart.c
Lab_5_FreeRTOS_Integration/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  i2c.c
Lab_5_FreeRTOS_Integration/MT3620_M4_BSP/mt3620/src/: nvic.c  vector_table.c
Lab_5_FreeRTOS_Integration/MT3620_M4_Driver/: CMakeLists.txt
Lab_5_FreeRTOS_Integration/MT3620_M4_Driver/HDL/inc/: hdl_i2s.h  hdl_pwm.h
Lab_5_FreeRTOS_Integration/MT3620_M4_Driver/MHAL/src/: mhal_eint.c
Lab_6_AzureRTOS_Environment/MT3620_lib/MT3620_M4_BSP/: CMakeLists.txt
Lab_6_AzureRTOS_Integration/: CMakeLists.txt  app_manifest.json
Lab_6_AzureRTOS_Integration/IMU_lib/: imu_temp_pressure.h
Lab_6_AzureRTOS_Integration/MT3620_lib/: CMakeLists.txt  CMakeSettings.json
Lab_6_AzureRTOS_Integration/MT3620_lib/MT3620_M4_Driver/: CMakeLists.txt  LICENSE
Lab_6_AzureRTOS_Integration/MT3620_lib/OS_HAL/inc/: os_hal_adc.h  os_hal_eint.h  os_hal_gpio.h  os_hal_gpioif.h  os_hal_i2c.h  os_hal_i2s.h  os_hal_mbox.h  os_hal_pwm.h  os_hal_spim.h  os_hal_wdt.h
Lab_6_AzureRTOS_Integration/demo_threadx/: demo_azure_rtos.c  i2c.h
Lab_6_AzureRTOS_Integration/tx/: CMakeLists.txt  readme_threadx.txt  readme_threadx_generic.txt  tx_port.h  tx_thread_context_save.S  tx_thread_schedule.S  tx_timer_interrupt.S
Lab_7_End_To_End/: CMakeLists.txt  README.md  main.c
Lab_7_End_To_End/learning_path_libs/: azure_iot.c  inter_core.h  peripheral_gpio.c
Lab_7_End_To_End/learning_path_libs/AVNET/: light_sensor.c
Lab_7_End_To_End/learning_path_libs/SEEED_STUDIO/: board.h
LearningPathLibrary/: CMakeLists.txt  azure_iot.c  azure_iot.h  config.c  config.h  device_twins.c  device_twins.h  direct_methods.c  direct_methods.h  exit_codes.h  globals.c  globals.h  inter_core.c  inter_core.h  peripheral_gpio.c  peripheral_gpio.h  terminate.c  terminate.h  timer.c  timer.h  user_config.c  user_config.h  utilities.c  utilities.h
LearningPathLibrary/AVNET/: board.c  imu_temp_pressure.c  imu_temp_pressure.h  light_sensor.c  light_sensor.h
SEEED/Lab_2_Send_Telemetry_to_Azure_IoT_Central/: CMakeLists.txt  README.md  app_manifest.json  main.c
SEEED/libs/: CMakeLists.txt  azure_iot.c  device_twins.c  device_twins.h  direct_methods.h  globals.c  globals.h  inter_core.c  timer.c
SEEED/shared/: CMakeLists.txt  azure_iot.c  azure_iot.h  device_twins.h  direct_methods.c  direct_methods.h  globals.h  peripheral.h  terminate.c  timer.c
SEEED/shared/oem/: board.h
SEEED_MINI/Lab_3_Control_Device_with_Device_Twins_and_Direct_Methods/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c
SEEED_MINI/Lab_4_FreeRTOS_and_Inter-Core_Messaging/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  linker.ld  main.c
SEEED_MINI/Lab_4_FreeRTOS_and_Inter-Core_Messaging/MT3620_M4_BSP/: CMakeLists.txt
samples/Azure_Sphere_Azure_RTOS_Ultrasonic-Rover/azure_rtos_threadx_real_time_ultrasonic_rover/: CMakeLists.txt  README.md  app_manifest.json  launch.vs.json
samples/CO2_Monitor/azure_sphere_co2/: CMakeLists.txt  app_manifest.json  main.c
(+824 files in other folders)
